@@ -1,3 +1,15 @@
+2016-10-05  Youenn Fablet  <youenn@apple.com>
+
+        Reuse CodeGenerator::UpdateFile in Tools CodeGenerator
+        https://bugs.webkit.org/show_bug.cgi?id=162960
+
+        Reviewed by Alex Christensen.
+
+        * DumpRenderTree/Bindings/CodeGeneratorDumpRenderTree.pm:
+        (WriteData): Using CodeGenerator::UpdateFile to do lazy generated file update when it is made feasible.
+        * WebKitTestRunner/InjectedBundle/Bindings/CodeGeneratorTestRunner.pm:
+        (WriteData): Ditto.
+
 2016-10-05  Alex Christensen  <achristensen@webkit.org>
 
         URLParser should parse IPv4 addresses as the last two pieces of an IPv6 address
