@@ -1,3 +1,15 @@
+2016-10-05  Youenn Fablet  <youenn@apple.com>
+
+        Reuse CodeGenerator::UpdateFile in Tools CodeGenerator
+        https://bugs.webkit.org/show_bug.cgi?id=162960
+
+        Reviewed by Alex Christensen.
+
+        No change of behavior.
+
+        * bindings/scripts/CodeGenerator.pm:
+        (UpdateFile): Adding FIXME to enable lazy writing when feasible.
+
 2016-10-05  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         [SOUP] HostTLSCertificateSet should not use SHA-1 hashes to compare certificates
